@@ -7,7 +7,11 @@ import com.oltpbenchmark.util.Pair;
 import org.apache.commons.io.IOUtils;
 
 import java.io.IOException;
+import java.net.URISyntaxException;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.sql.*;
 import java.util.*;
 import java.util.regex.Matcher;
@@ -44,10 +48,10 @@ public class HSQLDBCatalog implements AbstractCatalog {
         }
         this.conn = conn;
 
-        this.originalTableNames = this.getOriginalTableNames();
         try {
+            this.originalTableNames = this.getOriginalTableNames();
             this.init();
-        } catch (SQLException | IOException e) {
+        } catch (SQLException | IOException | URISyntaxException e) {
             throw new RuntimeException(String.format("Failed to initialize %s database catalog.", this.benchmarkModule.getBenchmarkName()), e);
         }
     }
@@ -204,15 +208,20 @@ public class HSQLDBCatalog implements AbstractCatalog {
      *
      * @return A map from the original table names to the uppercase HSQLDB table names.
      */
-    Map<String, String> getOriginalTableNames() {
+    Map<String, String> getOriginalTableNames() throws URISyntaxException {
         // Get the contents of the HSQLDB DDL for the current benchmark.
-        String ddlPath = this.benchmarkModule.getDatabaseDDLPath(DatabaseType.HSQLDB);
+        String ddlPath = this.benchmarkModule.getWorkloadConfiguration().getDDLPath();
+        if (ddlPath == null) {
+            ddlPath = this.benchmarkModule.getDatabaseDDLPath(DatabaseType.HSQLDB);
+            ddlPath = Paths.get(Objects.requireNonNull(this.getClass().getResource(ddlPath)).toURI()).toString();
+        }
         String ddlContents;
         try {
-            ddlContents = IOUtils.toString(Objects.requireNonNull(this.getClass().getResource(ddlPath)), Charset.defaultCharset());
+            ddlContents = Files.readString(Path.of(ddlPath), Charset.defaultCharset());
         } catch (IOException e) {
             throw new RuntimeException(e);
         }
+
         // Extract and map the original table names to their uppercase versions.
         Map<String, String> originalTableNames = new HashMap<>();
         Pattern p = Pattern.compile("CREATE[\\s]+TABLE[\\s]+(.*?)[\\s]+", Pattern.CASE_INSENSITIVE);
